Folds AMD style to core hilary

--- a/examples/nodeweb/package.json
+++ b/examples/nodeweb/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon www.js"
   },
   "dependencies": {
     "express": "~4.10.6",
