--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hilary",
     "version": "2.1.2",
-    "description": "hilary is a simple JavaScript Inversion of Control (IoC) container for dependency injection, written for Node.js and the browser",
+    "description": "a simple Dependency Injection (DI) library that provides Inversion of Control (IoC) capabilities in Node.js and the browser",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
