adds bower_components to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,14 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directory
+# Dependency directory (node)
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+
+# Dependency directory (browser)
+# Commenting this out is preferred by some people
+bower_components
 
 # Users Environment Variables
 .lock-wscript
