--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -18,9 +18,9 @@
         "hbs": "~2.8.0",
         "less-middleware": "1.0.x",
         "serve-static": "1.8.x",
-        "hilary": "1.1.x"
+        "hilary": "2.1.x"
     },
     "author": "Andy Wright <andes.collab@gmail.com> (https://github.com/losandes)",
-    "license": "Apache 2"
+    "license": "MIT"
 }
 
