--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "low",
         "ceremony"
     ],
-    "author": "Andy Wright <andes.collab@gmail.com> (https://github.com/losandes)",
+    "author": "&y <andes.collab@gmail.com> (https://github.com/losandes)",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/Acatar/hilaryjs/issues"
