--- a/examples/simple-http/package.json
+++ b/examples/simple-http/package.json
@@ -9,7 +9,7 @@
     },
     "dependencies": {
         "httpsys": "*",
-        "hilary": "2.0.x"
+        "hilary": "*"
     },
     "author": "Andy Wright <andes.collab@gmail.com> (https://github.com/losandes)",
     "license": "Apache 2"
