--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
         "node_modules",
         "bower_components",
         "src",
-        "test"
+        "test",
+        "index.js"
     ]
 }
