--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "hilary",
   "main": "release/hilary.js",
   "version": "5.0.0",
-  "homepage": "https://github.com/Acatar/hilaryjs",
+  "homepage": "https://github.com/losandes/hilaryjs",
   "authors": [
     "&y <andes.collab@gmail.com> (https://github.com/losandes)"
   ],
