--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Acatar/hilaryjs.git"
+    "url": "https://github.com/losandes/hilaryjs.git"
   },
   "keywords": [
     "dependency injection",
@@ -28,9 +28,9 @@
   "author": "&y <andes.collab@gmail.com> (https://github.com/losandes)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Acatar/hilaryjs/issues"
+    "url": "https://github.com/losandes/hilaryjs/issues"
   },
-  "homepage": "https://github.com/Acatar/hilaryjs",
+  "homepage": "https://github.com/losandes/hilaryjs",
   "dependencies": {
     "polyn": "^1.10.*"
   },
